[metadata]
name = napari-qute-tools
version = 0.0.1
author = Aaron Ponti
author_email = aaron.ponti@bsse.ethz.ch
description = "Set of tools associated with the base `qute` napari plugin."
license = Apache-2.0
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.entry_points]
napari.manifest =
    napari-qute-tools = napari_qute_tools:napari.yaml
